# OptoAgent

./: .env.example  .gitignore  Dockerfile  README.md  config.yaml  pyproject.toml  requirements.txt  tracking_sources.json
data/: ideas.json  papers.json
data/chroma_db/: chroma.sqlite3
data/knowledge/: test_note.md  test_rag.md
docs/: TESTING_GUIDE.md  USER_GUIDE.md
scripts/: check_env.py  debug_send_message.py  extract_journals.py  import_csv.py  test_feishu_connection.py  test_local_server.py  test_webhook.py
src/: main.py  models.py  scheduler.py  server.py
src/modules/: idea_generator.py  knowledge_base.py  notifier.py  searcher.py  summarizer.py
src/optoagent/: __init__.py  cli.py  config.py  logger.py  models.py  scheduler.py  server.py
src/optoagent/modules/: __init__.py  idea_generator.py  metadata.py  notifier.py  searcher.py  storage.py  summarizer.py  vector_store.py
tests/: conftest.py  test_searcher.py  test_storage.py
